# m

./: .bazelignore  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD  Makefile  README.md  WORKSPACE  flake.nix  go.mod  go.sum  gomod2nix.toml  package-lock.json  package.json
app/: .gitignore  flake.nix  go.mod  gomod2nix.toml
app/app/: flake.nix
app/c/: environment_schema.cue  kustomize_schema.cue
app/e/: vcluster-control-vc2.yaml  vcluster-control-vc3.yaml
app/k3d/: flake.nix
boot/: Makefile  flake.json  flake.nix  go.mod
boot/cue.mod/: module.cue
c/: Makefile  environment.cue  environment_schema.cue  kustomize.cue  kustomize_schema.cue  meh.cue  meh.yaml  yaml_tool.cue
cmd/cli/: Makefile  cli.go  client.go  flake.json  flake.nix  go.mod  go.sum  gomod2nix.toml  server.go
cmd/cli/command/: BUILD.bazel
cmd/infra/: BUILD.bazel  Tiltfile  flake.json  flake.nix  go.mod
cue.mod/: module.cue
e/: k3d-control.yaml  k3d-global.yaml  vcluster-control-vc0.yaml  vcluster-control-vc1.yaml  vcluster-control-vc2.yaml  vcluster-control-vc3.yaml  vcluster-control-vc4.yaml  vcluster-global-vc0.yaml
infra/defn/: flake.nix
k/argo-cd/: flake.json  flake.nix  kustomization.yaml  resource-ingress-argo-cd.yaml
k/argo-events/: kustomization.yaml
k/argo-workflows/: flake.json  flake.nix  kustomization.yaml
k/caddy/: kustomization.yaml  local.yaml  patch-service-tailscale.yaml
k/cert-manager/: local.yaml
k/coder/: kustomization.yaml  resource-ingress-coder.yaml
k/control-vc0/: local.yaml
k/control-vc1/: kustomization.yaml
k/control-vc2/: kustomization.yaml  local.yaml
k/control-vc3/: kustomization.yaml  local.yaml
k/control-vc4/: kustomization.yaml  local.yaml
k/coredns/: resource-configmap-coredns.yaml
k/dapr/: kustomization.yaml
k/defn/: kustomization.yaml
k/dev/: kustomization.yaml
k/external-dns/: kustomization.yaml
k/external-secrets-operator/: kustomization.yaml
k/global-vc0/: kustomization.yaml
k/hello/: kustomization.yaml  local.yaml  resource-ingress-bye.yaml  resource-ingress-hello.yaml  resource-ingressroute-default.defn.run.yaml  resource-ingressroute-defn-run-knative.yaml  resource-kservice-hello.yaml
k/k3d-control/: kustomization.yaml  local.yaml
k/k3d-control-secrets-store/: local.yaml
k/k3d-global/: kustomization.yaml  local.yaml
k/k3d-global-secrets-store/: resource-cluster-secret-store-dev.yaml
k/karpenter/: kustomization.yaml  local.yaml
k/knative/: local.yaml
k/kourier/: local.yaml
k/mastodon/: kustomization.yaml
k/meh/: flake.json  flake.nix
k/nginx/: kustomization.yaml  patch-service-nginx.yaml
k/pod-identity-webhook/: kustomization.yaml
k/rosie/: resource-tfo-demo-rosie.yaml
k/tfo/: kustomization.yaml
k/traefik/: kustomization.yaml  patch-ingressroute-traefik-dashboard.yaml  patch-service-tailscale.yaml  resource-ingressroute-http-to-https.yaml  resource-ingressroute-traefik-dashboard.yaml  resource-tlsstore-traefik.yaml
k/vault/: kustomization.yaml
k/vcluster-control-vc0/: kustomization.yaml  local.yaml
k/vcluster-control-vc0-secrets-store/: resource-cluster-secret-store-dev.yaml
k/vcluster-control-vc1/: kustomization.yaml  local.yaml
k/vcluster-control-vc1-secrets-store/: local.yaml
k/vcluster-control-vc2/: kustomization.yaml  local.yaml
k/vcluster-control-vc2-secrets-store/: local.yaml  resource-cluster-secret-store-dev.yaml
k3d/: flake.nix  k3d.yaml
k8s/: flake.json  flake.nix
pkg/: Makefile
pkg/acme/: flake.nix
sandbox/: flake.json  flake.nix  main.cue
w/: pnpm-lock.yaml  vite.config.ts
web/: pnpm-lock.yaml
(+271 files in other folders)
