load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "command",
    srcs = [
        "api.go",
        "client.go",
        "infra.go",
        "root.go",
        "server.go",
        "tui.go",
    ],
    embedsrcs = ["infra.cue"],
    importpath = "github.com/defn/m/cmd/cli/command",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/cli/gen/pet/v1:pet",
        "//cmd/cli/gen/pet/v1/petv1connect",
        "@com_github_aws_constructs_go_constructs_v10//:go_default_library",
        "@com_github_aws_jsii_runtime_go//:go_default_library",
        "@com_github_bufbuild_connect_go//:go_default_library",
        "@com_github_cdktf_cdktf_provider_tfe_go_tfe_v5//provider:go_default_library",
        "@com_github_charmbracelet_bubbles//list:go_default_library",
        "@com_github_charmbracelet_bubbletea//:go_default_library",
        "@com_github_charmbracelet_lipgloss//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_hashicorp_terraform_cdk_go_cdktf//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_cuelang_go//cue:go_default_library",
        "@org_cuelang_go//cue/cuecontext:go_default_library",
        "@org_cuelang_go//cue/load:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)
